Base server setup

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/FluxFail/flux.fail#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "knex": "^0.14.2",
     "pg": "^7.4.1"
