--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "pretest": "eslint server/*.js",
+    "pretest": "eslint server/*.js server/migrations/*.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
