--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "knex": "^0.14.2",
     "material-ui": "^0.20.0",
     "pg": "^7.4.1",
+    "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
