--- a/package.json
+++ b/package.json
@@ -23,8 +23,12 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "http-server": "^0.11.1",
+    "jsonwebtoken": "^8.1.1",
     "knex": "^0.14.2",
     "material-ui": "^0.20.0",
+    "passport": "^0.4.0",
+    "passport-http-bearer": "^1.0.1",
+    "password-generator": "^2.2.0",
     "pg": "^7.4.1",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
