--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
-    "uuid": "^3.2.1"
+    "uuid": "^3.2.1",
+    "validator": "^9.4.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
