--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,9 @@
 language: node_js
 node_js: 'lts/*'
+services:
+  - postgresql
+before_script:
+  - psql -c 'create database fluxfail;' -U postgres
+env:
+  matrix:
+    - DATABASE_URL=postgres://postgres:@localhost/fluxfail
