--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,11 @@ language: node_js
 node_js: 'lts/*'
 services:
   - postgresql
+  - docker
 before_script:
   - psql -c 'create database fluxfail;' -U postgres
+  - docker build -t fluxfail/server server/
+  - docker run -d -p 127.0.01:8080:8080 fluxfail/server
 env:
   matrix:
     - DATABASE_URL=postgres://postgres:@localhost/fluxfail
