--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ before_script:
   - cp package.json server/package.json
   - docker build -t fluxfail/server server/
   - docker run -d -p 127.0.01:8080:8080 fluxfail/server
+  - npm run build
+  - docker build -t fluxfail/client client/
+  - docker run -d -p 127.0.01:8081:80 fluxfail/client
 env:
   matrix:
     - DATABASE_URL=postgres://postgres:@localhost/fluxfail
