--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "build": "webpack --config client/webpack.config.js",
     "pretest": "eslint server/*.js server/migrations/*.js server/routes/*.js server/utils/*.js client/*.jsx client/elements/*.jsx client/actions/*.js client/reducers/*.js client/middleware/*.js",
-    "start": "http-server client/dist -p 8080 -s -c-1",
+    "client": "http-server client/dist -p 8080 -s -c-1",
     "migrate": "knex migrate:latest --cwd server",
     "server": "node server/",
+    "start": "npm run migrate && npm run server",
     "test": "mocha --reporter spec spec/*.js"
   },
   "repository": {
