--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --config client/webpack.config.js",
-    "pretest": "eslint server/*.js server/migrations/*.js server/routes/*.js server/utils/*.js client/*.jsx client/elements/*.jsx client/actions/*.js client/reducers/*.js client/middleware/*.js",
     "client": "http-server client/dist -p 8080 -s -c-1",
     "migrate": "knex migrate:latest --cwd server",
-    "server": "node server/",
-    "start": "npm run migrate && npm run server",
+    "start": "node server/",
+    "pretest": "eslint server/*.js server/migrations/*.js server/routes/*.js server/utils/*.js client/*.jsx client/elements/*.jsx client/actions/*.js client/reducers/*.js client/middleware/*.js",
     "test": "mocha --reporter spec spec/*.js"
   },
   "repository": {
