--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "chai": "^4.1.2",
     "copy-webpack-plugin": "^4.3.1",
     "eslint": "^4.15.0",
     "eslint-config-airbnb": "^16.1.0",
