Actually send the login email

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jsonwebtoken": "^8.1.1",
     "knex": "^0.14.2",
     "material-ui": "^0.20.0",
+    "nodemailer": "^4.6.3",
     "passport": "^0.4.0",
     "passport-http-bearer": "^1.0.1",
     "password-generator": "^2.2.0",
@@ -38,6 +39,7 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
+    "string-template": "^1.0.0",
     "uuid": "^3.2.1",
     "validator": "^9.4.0"
   },
