--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "client": "http-server client/dist -p 8080 -s -c-1",
     "migrate": "knex migrate:latest --cwd server",
     "start": "node server/",
+    "smtp": "fake-smtp-server",
     "pretest": "eslint server/*.js server/migrations/*.js server/routes/*.js server/utils/*.js client/*.jsx client/elements/*.jsx client/actions/*.js client/reducers/*.js client/middleware/*.js",
     "test": "mocha --reporter spec spec/*.js"
   },
@@ -56,6 +57,7 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.6.0",
+    "fake-smtp-server": "^0.7.6",
     "mocha": "^5.0.4",
     "supertest": "^3.0.0",
     "webpack": "^3.10.0"
