Allow TLS to fake SMTP

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       DATABASE_URL: 'postgres://fluxfail:@fluxfail-postgres/fluxfail'
       SMTP_URL: 'smtp://fakesmtp:1025'
       PORT: 8080
+      NODE_TLS_REJECT_UNAUTHORIZED: '0'
     links:
       - db
       - fakesmtp
