--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
+    "express-openapi": "^2.0.1",
     "http-server": "^0.11.1",
+    "js-yaml": "^3.12.0",
     "jsonwebtoken": "^8.1.1",
     "knex": "^0.14.2",
     "material-ui": "^0.20.0",
@@ -43,7 +45,8 @@
     "string-template": "^1.0.0",
     "tv4": "^1.3.0",
     "uuid": "^3.2.1",
-    "validator": "^9.4.0"
+    "validator": "^9.4.0",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
