public beta pre-launch

--- a/client/nginx/nginx_vhost.conf
+++ b/client/nginx/nginx_vhost.conf
@@ -1,12 +1,12 @@
 server {
     # Basic Auth
-    auth_basic           "Closed Beta (username: flux, password: fail)";
-    auth_basic_user_file /etc/nginx/fluxfail.htpasswd;
+    # auth_basic           "Closed Beta (username: flux, password: fail)";
+    # auth_basic_user_file /etc/nginx/fluxfail.htpasswd;
 
     listen       80;
     server_name  localhost;
 
-    #charset koi8-r;
+    charset utf-8;
     #access_log  /var/log/nginx/host.access.log  main;
 
     location / {
