--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ node_js: lts/*
 services:
 - docker
 before_script:
+- docker build -t fluxfail/site site/
 - cp package.json server/package.json
 - docker build -t fluxfail/server server/
 - npm run build
