--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,3 +33,7 @@ services:
     ports:
       - '127.0.0.1:1025:1025'
       - '127.0.0.1:1080:1080'
+  site:
+    image: fluxfail/site
+    ports:
+      - '0.0.0.0:8082:80'
