--- a/client/package.json
+++ b/client/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --config client/webpack.config.js",
-    "dev": "webpack-dev-server --config client/webpack.config.js --content-base client/dist/",
     "client": "http-server client/dist -p 8081 -s -c-1",
-    "site": "http-server site -p 8082 -s -c-1",
     "migrate": "knex migrate:latest --cwd server",
     "start": "node server/",
     "smtp": "fake-smtp-server",
@@ -25,16 +23,13 @@
   },
   "homepage": "https://github.com/FluxFail/flux.fail#readme",
   "dependencies": {
-    "@material-ui/core": "^3.5.1",
-    "antd": "^3.10.7",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "http-server": "^0.11.1",
     "jsonwebtoken": "^8.1.1",
     "knex": "^0.14.2",
-    "material-ui": "^0.20.2",
-    "moment": "^2.22.2",
+    "material-ui": "^0.20.0",
     "nodemailer": "^4.6.3",
     "passport": "^0.4.0",
     "passport-http-bearer": "^1.0.1",
@@ -53,27 +48,19 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
-    "babel-plugin-import": "^1.11.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "chai": "^4.1.2",
     "copy-webpack-plugin": "^4.3.1",
-    "css-loader": "^1.0.1",
     "eslint": "^4.15.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.6.0",
     "fake-smtp-server": "^0.7.6",
-    "less": "^3.8.1",
-    "less-loader": "^4.1.0",
-    "less-vars-to-js": "^1.3.0",
     "mocha": "^5.0.4",
-    "style-loader": "^0.23.1",
     "supertest": "^3.0.0",
-    "webpack": "^3.10.0",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^2.11.3"
+    "webpack": "^3.10.0"
   }
 }
