--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/FluxFail/flux.fail#readme",
   "dependencies": {
+    "antd": "^3.11.2",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
@@ -43,7 +44,8 @@
     "string-template": "^1.0.0",
     "tv4": "^1.3.0",
     "uuid": "^3.2.1",
-    "validator": "^9.4.0"
+    "validator": "^9.4.0",
+    "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
