--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "site": "http-server site -p 8082 -s -c-1",
     "migrate": "knex migrate:latest --cwd server",
     "start": "node server/",
+    "server-dev": "nodemon server/index.js",
     "smtp": "fake-smtp-server",
     "pretest": "eslint server/*.js server/migrations/*.js server/routes/*.js server/utils/*.js client/*.jsx client/elements/*.jsx client/actions/*.js client/reducers/*.js client/middleware/*.js",
     "test": "mocha --reporter spec spec/*.js"
@@ -75,6 +76,7 @@
     "supertest": "^3.0.0",
     "webpack": "^3.10.0",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^2.11.3"
+    "webpack-dev-server": "^2.11.3",
+    "nodemon": "^1.18.8"
   }
 }
