--- a/server/package.json
+++ b/server/package.json
@@ -49,7 +49,8 @@
     "tv4": "^1.3.0",
     "uuid": "^3.2.1",
     "validator": "^9.4.0",
-    "whatwg-fetch": "^3.0.0"
+    "whatwg-fetch": "^3.0.0",
+    "argon2": "0.20.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
