adding the about page to the docker image

--- a/site/Dockerfile
+++ b/site/Dockerfile
@@ -1,5 +1,6 @@
 FROM nginx
 
 COPY index.html /usr/share/nginx/html
+COPY about.html /usr/share/nginx/html
 COPY favicon.ico /usr/share/nginx/html/favicon.ico
 COPY assets /usr/share/nginx/html/assets
