--- a/package.json
+++ b/package.json
@@ -48,8 +48,7 @@
     "string-template": "^1.0.0",
     "tv4": "^1.3.0",
     "uuid": "^3.2.1",
-    "validator": "^9.4.0",
-    "whatwg-fetch": "^3.0.0"
+    "validator": "^9.4.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
