--- a/package.json
+++ b/package.json
@@ -26,14 +26,12 @@
   "homepage": "https://github.com/FluxFail/flux.fail#readme",
   "dependencies": {
     "@material-ui/core": "^3.5.1",
-    "antd": "^3.10.7",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "http-server": "^0.11.1",
     "jsonwebtoken": "^8.1.1",
     "knex": "^0.14.2",
-    "material-ui": "^0.20.2",
     "moment": "^2.22.2",
     "nodemailer": "^4.6.3",
     "passport": "^0.4.0",
@@ -41,14 +39,11 @@
     "password-generator": "^2.2.0",
     "pg": "^7.4.1",
     "prop-types": "^15.6.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-redux": "^5.0.6",
-    "redux": "^3.7.2",
     "string-template": "^1.0.0",
     "tv4": "^1.3.0",
     "uuid": "^3.2.1",
-    "validator": "^9.4.0"
+    "validator": "^9.4.0",
+    "vue": "^2.5.22"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -73,7 +68,6 @@
     "style-loader": "^0.23.1",
     "supertest": "^3.0.0",
     "webpack": "^3.10.0",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^2.11.3"
+    "webpack-cli": "^3.1.2"
   }
 }
