--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --config client/webpack.config.js",
-    "dev": "webpack-dev-server --config client/webpack.config.js --content-base client/dist/",
-    "client": "http-server client/dist -p 8081 -s -c-1",
+    "dev": "cd client && npm run dev",
+    "client": "cd client && npm start",
     "site": "http-server site -p 8082 -s -c-1",
     "migrate": "knex migrate:latest --cwd server",
     "start": "node server/",
