--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "babel-polyfill": "^6.26.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vuetify": "^1.4.4"
+    "vuetify": "^1.4.4",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.3.1",
@@ -59,7 +60,7 @@
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1",
+    "stylus-loader": "^3.0.2",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-cli-plugin-vuetify": "^0.4.6",
