--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "start": "npm run dev"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "vue": "^2.5.2",
     "vue-i18n": "^8.8.0",
