--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
+    "roboto-fontface": "^0.10.0",
     "vue": "^2.5.2",
     "vue-i18n": "^8.8.0",
     "vue-router": "^3.0.1",
