--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,12 @@
   "dependencies": {
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
+    "jsonwebtoken": "^8.4.0",
     "roboto-fontface": "^0.10.0",
+    "validator": "^10.11.0",
     "vue": "^2.5.2",
     "vue-i18n": "^8.8.0",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
     "vuetify": "^1.4.4",
     "vuex": "^3.1.0"
