--- a/spec/fakesmtp/Dockerfile
+++ b/spec/fakesmtp/Dockerfile
@@ -2,11 +2,11 @@ FROM node:carbon-alpine
 
 WORKDIR /opt/fakesmtp
 
-COPY package.json ./
+COPY package.json package-lock.json ./
 
 RUN npm install
 
 EXPOSE 1025
 EXPOSE 1080
 
-CMD npm run smtp
+CMD npm start
