--- a/client/package.json
+++ b/client/package.json
@@ -8,26 +8,16 @@
     "build": "node build/build.js",
     "lint": "eslint --ext .js,.vue src",
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-    "start": "npm run dev"
+    "start": "npm run dev",
+    "image": "docker build -t fluxfail/client .",
+    "pretest": "eslint ./*.js ./src/*.js ./src/pages/*.vue ./src/components*.vue"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "babel-polyfill": "^6.26.0",
-    "jsonwebtoken": "^8.4.0",
-    "roboto-fontface": "^0.10.0",
-    "validator": "^10.11.0",
-    "vue": "^2.5.2",
-    "vue-i18n": "^8.8.0",
-    "vue-resource": "^1.5.1",
-    "vue-router": "^3.0.1",
-    "vuetify": "^1.4.4",
-    "vuex": "^3.1.0"
-  },
-  "devDependencies": {
     "@babel/preset-env": "^7.3.1",
     "@fortawesome/fontawesome-free": "^5.7.0",
-    "@mdi/font": "^3.4.93",
+    "@smartweb/vue-flash-message": "^0.4.1",
     "autoprefixer": "^7.1.2",
+    "axios": "^0.18.0",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
@@ -35,9 +25,10 @@
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
-    "chalk": "^2.0.1",
+    "chalk": "^2.4.2",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
     "eslint": "^4.15.0",
@@ -54,8 +45,9 @@
     "font-awesome": "^4.7.0",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
-    "material-design-icons-iconfont": "^4.0.4",
-    "node-notifier": "^5.1.2",
+    "jsonwebtoken": "^8.4.0",
+    "mdi-vue": "^0.2.14",
+    "moment": "^2.24.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
@@ -63,21 +55,42 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
+    "roboto-fontface": "^0.10.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
-    "vue-cli-plugin-vuetify": "^0.4.6",
+    "uuid": "^3.3.2",
+    "validator": "^10.11.0",
+    "vue": "^2.5.2",
+    "vue-i18n": "^8.8.0",
     "vue-loader": "^13.3.0",
+    "vue-resource": "^1.5.1",
+    "vue-router": "^3.0.1",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
+    "vuetify": "^1.4.4",
     "vuetify-loader": "^1.0.5",
+    "vuex": "^3.1.0",
+    "vuex-flash": "^1.0.0",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0"
+  },
+  "devDependencies": {
+    "eslint": "^5.13.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "node-notifier": "^5.1.2",
+    "vue-cli-plugin-vuetify": "^0.4.6",
+    "webpack-dev-server": "^2.9.1"
   },
   "browserslist": [
     "> 1%",
