--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@babel/preset-env": "^7.3.1",
     "@fortawesome/fontawesome-free": "^5.7.0",
+    "@mdi/font": "^3.5.95",
     "@smartweb/vue-flash-message": "^0.4.1",
     "autoprefixer": "^7.1.2",
     "axios": "^0.18.0",
@@ -46,6 +47,7 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "jsonwebtoken": "^8.4.0",
+    "material-design-icons-iconfont": "^4.0.5",
     "mdi-vue": "^0.2.14",
     "moment": "^2.24.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
@@ -60,6 +62,7 @@
     "shelljs": "^0.7.6",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
+    "typeface-oswald": "0.0.54",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "uuid": "^3.3.2",
